[package]
name = "kstd"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A kernel standard library for the martimos kernel"
repository = "https://github.com/martimos/kstd"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
spin = "0.9.4"
